@@ -1,0 +1,2 @@
+SHA256 (syncthing-syncthing-v0.12.2_GH0.tar.gz) = 22d14c884537c8b6b6cb40563d4876e5167ea183f5c9d0e711782b5623dd59f9
+SIZE (syncthing-syncthing-v0.12.2_GH0.tar.gz) = 4240357
